Overhaul Bucket Query Language implementation, logical & physical planners, optimizer and the plan executor.